--- a/theme/index.scss
+++ b/theme/index.scss
@@ -46,7 +46,8 @@ a {
     top: 50%;
     transform: translate(-50%, -90%);
   }
-  .div1, .div2 {
+  .div1,
+  .div2 {
     animation: rotate-all 2s 0 infinite linear alternate;
   }
 
@@ -56,8 +57,8 @@ a {
     background-color: #669999;
     position: relative;
     //margin: auto;
-    animation: square-to-circle 2.5s .5s infinite cubic-bezier(1,.015,.295,1.225) alternate-reverse;
-
+    animation: square-to-circle 2.5s 0.5s infinite
+      cubic-bezier(1, 0.015, 0.295, 1.225) alternate-reverse;
   }
 
   .div2 {
@@ -66,7 +67,8 @@ a {
     background-color: #669999;
     position: relative;
     //margin: auto;
-    animation: square-to-circle2 2.5s .42s infinite cubic-bezier(1,.015,.295,1.225) alternate-reverse;
+    animation: square-to-circle2 2.5s 0.42s infinite
+      cubic-bezier(1, 0.015, 0.295, 1.225) alternate-reverse;
   }
 
   #one {
@@ -88,58 +90,58 @@ a {
   }
 
   @keyframes square-to-circle {
-    0%  {
-      border-radius:0 0 0 0;
+    0% {
+      border-radius: 0 0 0 0;
       //background:;
-      transform:rotate(45deg);
+      transform: rotate(45deg);
     }
-    25%  {
-      border-radius:50% 0 0 0;
-      background:darksalmon;
-      transform:rotate(135deg);
+    25% {
+      border-radius: 50% 0 0 0;
+      background: darksalmon;
+      transform: rotate(135deg);
     }
-    50%  {
-      border-radius:50% 50% 0 0;
-      background:indianred;
-      transform:rotate(180deg);
+    50% {
+      border-radius: 50% 50% 0 0;
+      background: indianred;
+      transform: rotate(180deg);
     }
-    75%  {
-      border-radius:50% 50% 50% 0;
-      background:lightcoral;
-      transform:rotate(315deg);
+    75% {
+      border-radius: 50% 50% 50% 0;
+      background: lightcoral;
+      transform: rotate(315deg);
     }
     100% {
-      border-radius:50%;
-      background:darksalmon;
-      transform:rotate(404deg);
+      border-radius: 50%;
+      background: darksalmon;
+      transform: rotate(404deg);
     }
   }
 
   @keyframes square-to-circle2 {
-    0%  {
-      border-radius:0 0 0 0;
+    0% {
+      border-radius: 0 0 0 0;
       //background: ;
-      transform:rotate(45deg);
+      transform: rotate(45deg);
     }
-    25%  {
-      border-radius:0 0 50% 0;
-      background:darksalmon;
-      transform:rotate(135deg);
+    25% {
+      border-radius: 0 0 50% 0;
+      background: darksalmon;
+      transform: rotate(135deg);
     }
-    50%  {
-      border-radius:0 0 50% 50%;
-      background:indianred;
-      transform:rotate(180deg);
+    50% {
+      border-radius: 0 0 50% 50%;
+      background: indianred;
+      transform: rotate(180deg);
     }
-    75%  {
-      border-radius:50% 0 50% 50%;
-      background:lightcoral;
-      transform:rotate(315deg);
+    75% {
+      border-radius: 50% 0 50% 50%;
+      background: lightcoral;
+      transform: rotate(315deg);
     }
     100% {
-      border-radius:50%;
-      background:darksalmon;
-      transform:rotate(404deg);
+      border-radius: 50%;
+      background: darksalmon;
+      transform: rotate(404deg);
     }
   }
 }
@@ -168,7 +170,7 @@ button {
     content: '';
     width: 1px;
     height: 60%;
-    background-color: #E7E7E9;
+    background-color: #e7e7e9;
     top: 50%;
     transform: translateY(-50%);
     left: -32px;
@@ -190,15 +192,21 @@ button {
   }
 }
 .v-btn {
+  position: relative;
+  appearance: none;
   background-color: transparent;
   display: inline-flex;
   align-items: center;
+  text-align: center;
   justify-content: center;
   border-radius: 16px;
-  box-shadow: 0px 0px 32px $dark;
+  overflow: hidden;
+  box-shadow: 0px 0px 32px rgba($dark, 0.24);
   text-decoration: none;
   font-size: 18px;
   font-weight: 700;
+  transition: color 0.25s ease;
+  transform: translate(0, 0);
   .icon {
     display: inline-flex;
     align-items: center;
@@ -215,10 +223,16 @@ button {
   &.primary {
     background-color: $blue;
     color: $white;
+    &:hover {
+      //color: $blue;
+    }
   }
   &.white {
     background-color: $white;
     color: $blue;
+    &:hover {
+      //color: $white;
+    }
   }
   &.outline-white {
     border: 1px solid $white;
@@ -231,8 +245,17 @@ button {
   &.v-size--small {
     padding: 9px 43px;
   }
+  span {
+    position: relative;
+    display: inline-block;
+    z-index: 20;
+  }
+  &:hover {
+    --spacing: 0;
+    --duration: 0.45s;
+    transition: color 0.25s ease;
+  }
 }
-
 .accent {
   color: $accent;
 }
@@ -242,12 +265,19 @@ button {
   height: 100vh;
 }
 .app-header {
-  position: absolute;
+  position: fixed;
   width: 100%;
   z-index: 101;
   padding: 40px;
+  transition: padding .25s ease;
   .logo {
     margin-right: 54px;
+  }
+  &--scrolled {
+    padding: 18px 20px;
+    background-color: #fff;
+    transition: padding .25s ease;
+    border-bottom: 1px solid #d3d3d3;
   }
 }
 .top-line {
@@ -314,7 +344,9 @@ button {
       }
     }
   }
-  .swiper-pagination-fraction, .swiper-pagination-custom, .swiper-container-horizontal > .swiper-pagination-bullets {
+  .swiper-pagination-fraction,
+  .swiper-pagination-custom,
+  .swiper-container-horizontal > .swiper-pagination-bullets {
     display: flex;
     align-items: center;
     left: 280px;
@@ -328,14 +360,14 @@ button {
       width: 16px;
       height: 16px;
       border-radius: 50%;
-      border: 2px solid rgba(#182C37, .24);
+      border: 2px solid rgba(#182c37, 0.24);
       &-active {
         position: relative;
         display: inline-block;
         width: 24px;
         height: 24px;
         background-color: transparent;
-        border: 4px solid #182C37;
+        border: 4px solid #182c37;
         &::after {
           position: absolute;
           content: '';
@@ -345,7 +377,7 @@ button {
           width: 8px;
           height: 8px;
           border-radius: 50%;
-          background-color: #182C37;
+          background-color: #182c37;
         }
       }
     }
@@ -364,7 +396,8 @@ button {
   /*padding: 15px;*/
 }
 body .swiper-button {
-  &-prev, &-next {
+  &-prev,
+  &-next {
     display: block;
     background-color: transparent;
     width: 56px;
@@ -378,7 +411,7 @@ body .swiper-button {
     }
   }
   &-prev {
-    border: 1px solid #C0C5C8;
+    border: 1px solid #c0c5c8;
     background-color: $grey;
     &::after {
       content: 'arrow_back';
@@ -400,7 +433,6 @@ body .swiper-button {
   padding-left: 280px;
 }
 .swiper-wrapper {
-
 }
 .slide-controls {
   display: flex;
@@ -416,7 +448,6 @@ body .swiper-button {
   font-weight: 700;
 }
 .slider-subtitle {
-
 }
 
 .section-title {
@@ -477,7 +508,7 @@ body .swiper-button {
       position: absolute;
       content: '';
       margin: 0 auto;
-      background-color: #E7E7E9;
+      background-color: #e7e7e9;
     }
     &:nth-child(1) {
       &::after {
@@ -641,7 +672,7 @@ body .swiper-button {
     width: 16px;
     height: 16px;
     border-radius: 50%;
-    border: 2px solid rgba($dark, .24);
+    border: 2px solid rgba($dark, 0.24);
   }
   &.active {
     .round-inner {
@@ -787,7 +818,8 @@ body .swiper-button {
       position: relative;
     }
     .swiper-button {
-      &-prev, &-next {
+      &-prev,
+      &-next {
         position: relative;
         &.swiper-button-disabled {
           opacity: 0.7;
@@ -799,18 +831,74 @@ body .swiper-button {
       &-next {
         right: 0;
       }
-
     }
   }
 }
 
 // Enter School
+.timeline--enter-school {
+  display: flex;
+  position: relative;
+  padding-top: 0px;
+  margin-right: 0;
+  .timeline {
+    &__period,
+    &__economy {
+      display: flex;
+      flex-direction: column;
+    }
+    &__period {
+      flex: 1;
+      ul {
+        li {
+          display: flex;
+          align-items: center;
+          .round {
+            background-color: #f6f6f6;
+          }
+        }
+      }
+    }
+    &__economy {
+      ul {
+        li {
+          display: flex;
+          align-items: center;
+          color: $accent;
+          .round {
+            background-color: transparent;
+            border: none;
+            &-inner {
+              border: none;
+              &::after {
+                display: none;
+              }
+            }
+          }
+        }
+      }
+    }
+    &__header {
+      color: #879197;
+      margin-bottom: 32px;
+    }
+  }
+}
 .school-plans {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 20px;
   .school-plan {
     border-radius: 24px;
+    &--proposal {
+      h4 {
+        font-family: $header-font;
+        font-size: 39px;
+        font-weight: 500;
+        margin-bottom: 56px;
+        padding-top: 56px;
+      }
+    }
     &__header {
       font-family: $header-font;
       font-weight: 900;
@@ -832,26 +920,64 @@ body .swiper-button {
       padding: 56px 32px 60px;
     }
     &__items {
-
     }
     &__item {
+      display: flex;
+      align-items: center;
       margin-bottom: 24px;
+      .access {
+        margin-right: 16px;
+      }
+      &-text {
+      }
       &:last-child {
         margin-bottom: 0;
       }
     }
   }
 }
-.enter-school {
 
+.access {
+  display: inline-flex;
+  width: 20px;
+  height: 20px;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #e7e7e9;
+  &.available {
+    border-color: $accent;
+    svg {
+      fill: $accent;
+      font-weight: 600;
+    }
+  }
 }
 
+.enter-school {
+  &__top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 64px;
+  }
+  &__classes {
+    padding-left: 15px;
+  }
+  &__class {
+    background-color: $blue;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 12px 16px;
+    border-top-right-radius: 16px;
+    border-bottom-right-radius: 16px;
+  }
+}
 
 // Additional Opps
 
 .additional-opps {
   &__content {
-
   }
   &-list {
     display: grid;
@@ -860,7 +986,7 @@ body .swiper-button {
     margin-top: 52px;
     &__item {
       border-radius: 24px;
-      border: 1px solid #C0C5C8;
+      border: 1px solid #c0c5c8;
       background-color: $white;
       padding: 56px 32px;
     }
@@ -890,7 +1016,7 @@ body .swiper-button {
 // Request
 
 .request {
-  background-image: url("~@/assets/images/request-bg.png");
+  background-image: url('~@/assets/images/request-bg.png');
   background-repeat: no-repeat;
   background-size: cover;
   max-width: 90%;
@@ -978,32 +1104,39 @@ body .swiper-button {
 
 .subscription {
   &__container {
-
   }
   &__form {
     position: relative;
     display: flex;
     align-items: center;
     padding-bottom: 6px;
+  }
+  &__icon, &__submit {
+    position: absolute;
+  }
+  &__input {
+    position: relative;
+    outline: none;
+    display: block;
+    background-color: transparent;
+    width: 100%;
+    border: none;
+    padding: 20px 52px 20px 26px;
+    border-bottom: 1px solid #879197;
+    color: #fff;
+    //padding-bottom: 8px;
     &::after {
       position: absolute;
       content: '';
       bottom: 0;
       width: 100%;
       height: 1px;
-      background-color: #879197;
+      background-color: transparent;
+      display: none;
     }
-  }
-  &__input {
-    border: none;
-    display: block;
-    background-color: transparent;
     &::placeholder {
       color: #fff;
     }
-  }
-  &__icon {
-    margin-right: 16px;
   }
   &__submit {
     display: inline-flex;
@@ -1016,5 +1149,118 @@ body .swiper-button {
     border: none;
     background-color: $blue;
     margin-left: auto;
+    right: 0;
+  }
+  &__icon {
+    margin-right: 16px;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+}
+
+
+.socials {
+  display: flex;
+  list-style-type: none;
+  &-container {
+    display: flex;
+    align-items: center;
+    margin-top: 32px;
+    label {
+      color: #879197;
+      display: inline-block;
+      margin-right: 8px;
+    }
+  }
+  li {
+    margin-right: 15px;
+    &:last-child {
+      margin-right: 0
+    }
+  }
+  a {
+
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #fff;
+    width: 40px;
+    height: 40px;
+    border-radius: 6px;
+    background-color: transparent;
+    text-decoration: none;
+    overflow: hidden;
+    z-index: 2;
+    transition: color .35s ease;
+
+    span {
+      transition: transform .35s ease
+    }
+
+    &::before {
+      position: absolute;
+      content: '';
+      width: 120%;
+      height: 120%;
+      background-color: $blue;
+      transform: rotate(45deg);
+      border-radius: 6px;
+      left: -110%;
+      top: 90%;
+      z-index: -1;
+    }
+    &:hover {
+      transition: color .35s ease;
+      &::before {
+        animation: link 0.7s 1;
+        top: -10%;
+        left: -10%;
+      }
+      svg {
+        transform: scale(1.2);
+        transition: transform .25s ease;
+      }
+    }
+  }
+}
+
+@keyframes link {
+  0% {
+    left: -110%;
+    top: 90%;
+  }
+  50% {
+    left: 10%;
+    top: -30%
+  }
+  100% {
+    top: -10%;
+    left: -10%;
+  }
+}
+
+
+.copyrights {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #879197;
+  padding: 54px 0;
+  margin-top: 64px;
+  border-top: 1px solid #879197;
+  &__left {
+    padding-right: 20px;
+  }
+  &__right {
+    p {
+      display: flex;
+      align-items: center;
+      span {
+        display: inline-block;
+        margin-right: 28px;
+      }
+    }
   }
 }
