--- a/theme/index.scss
+++ b/theme/index.scss
@@ -30,16 +30,39 @@ a {
   }
 }
 .preloader {
-  justify-content: center;
-  display: none;
+  display: flex;
   position: fixed;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  background-color: #fff;
   top: 0;
   left: 0;
-  z-index: 999;
+  z-index: 99999;
+  .overlay {
+    height: 100%;
+    top: 0%;
+    z-index: 102;
+    background-color: #fff;
+    display: flex;
+    &.first,
+    &.second,
+    &.third {
+      position: relative;
+      flex: 1;
+    }
+    &.first,
+    &.second {
+      &::after {
+        display: none;
+        position: absolute;
+        content: '';
+        right: 0;
+        width: 1px;
+        height: 100%;
+        background-color: #879197;
+      }
+    }
+  }
   &__content {
     position: absolute;
     left: 50%;
@@ -269,14 +292,14 @@ button {
   width: 100%;
   z-index: 101;
   padding: 40px;
-  transition: padding .25s ease;
+  transition: padding 0.25s ease, background-color 0.25s ease;
   .logo {
     margin-right: 54px;
   }
   &--scrolled {
     padding: 18px 20px;
     background-color: #fff;
-    transition: padding .25s ease;
+    transition: padding 0.25s ease, background-color 0.25s ease;
     border-bottom: 1px solid #d3d3d3;
   }
 }
@@ -317,6 +340,18 @@ button {
   height: 100vh;
   left: 0;
   top: 0;
+  .letter {
+    display: inline-block;
+  }
+  .word {
+    margin-right: 10px;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+  .accent {
+    display: block;
+  }
   .swiper {
     width: 100% !important;
     height: 100vh;
@@ -575,12 +610,19 @@ body .swiper-button {
     }
   }
 }
+.online-school,
+.demo-access {
+  padding-top: 130px;
+  padding-bottom: 110px;
+}
+.additional-opps {
+  padding-top: 130px;
+}
 .online-school {
   background-color: $dark;
   color: $white;
   padding-left: 250px;
-  padding-top: 130px;
-  padding-bottom: 250px;
+  height: 100vh;
   .section-title {
     margin-bottom: 32px;
   }
@@ -737,7 +779,16 @@ body .swiper-button {
     padding-top: 60px;
   }
   &__description {
+    position: relative;
     flex: 1 1 auto;
+    height: 100vh;
+    > * {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      opacity: 0;
+      visibility: hidden;
+    }
   }
   &__info {
     padding: 56px 60px 24px 60px;
@@ -1111,7 +1162,8 @@ body .swiper-button {
     align-items: center;
     padding-bottom: 6px;
   }
-  &__icon, &__submit {
+  &__icon,
+  &__submit {
     position: absolute;
   }
   &__input {
@@ -1159,7 +1211,6 @@ body .swiper-button {
   }
 }
 
-
 .socials {
   display: flex;
   list-style-type: none;
@@ -1176,11 +1227,10 @@ body .swiper-button {
   li {
     margin-right: 15px;
     &:last-child {
-      margin-right: 0
+      margin-right: 0;
     }
   }
   a {
-
     position: relative;
     display: inline-flex;
     justify-content: center;
@@ -1193,10 +1243,10 @@ body .swiper-button {
     text-decoration: none;
     overflow: hidden;
     z-index: 2;
-    transition: color .35s ease;
+    transition: color 0.35s ease;
 
     span {
-      transition: transform .35s ease
+      transition: transform 0.35s ease;
     }
 
     &::before {
@@ -1212,7 +1262,7 @@ body .swiper-button {
       z-index: -1;
     }
     &:hover {
-      transition: color .35s ease;
+      transition: color 0.35s ease;
       &::before {
         animation: link 0.7s 1;
         top: -10%;
@@ -1220,7 +1270,7 @@ body .swiper-button {
       }
       svg {
         transform: scale(1.2);
-        transition: transform .25s ease;
+        transition: transform 0.25s ease;
       }
     }
   }
@@ -1233,14 +1283,13 @@ body .swiper-button {
   }
   50% {
     left: 10%;
-    top: -30%
+    top: -30%;
   }
   100% {
     top: -10%;
     left: -10%;
   }
 }
-
 
 .copyrights {
   display: flex;
