--- a/theme/index.scss
+++ b/theme/index.scss
@@ -273,7 +273,7 @@ button {
   transform: translate(-50%,-50%);
   span {
     height: 2px;
-    width: 2.222vw;
+    width: 18px;
     &:nth-child(2) {
       margin: 4px 0;
     }
@@ -485,6 +485,9 @@ button {
     align-items: center;
     left: 280px;
     bottom: 60px;
+    @include lg-block() {
+      left: 100px;
+    }
   }
   .swiper-pagination {
     text-align: inherit;
@@ -565,6 +568,9 @@ body .swiper-button {
   width: 100%;
   max-width: 980px;
   padding-left: 280px;
+  @include lg-block() {
+    padding-left: 100px;
+  }
 }
 .swiper-wrapper {
 }
@@ -593,14 +599,23 @@ body .swiper-button {
     color: $white;
   }
 }
+.test {
+  font-family: 'OpenSansBold', sans-serif;
+}
 .study-with-us {
   position: relative;
   z-index: 1;
   max-width: 1560px;
-  margin: 216px auto 130px;
+  margin: 135px auto 130px;
   background-repeat: no-repeat;
   background-position: bottom;
   height: 688px;
+  @include md-block() {
+    margin: 170px auto 130px;
+  }
+  @include tablet-block() {
+    height: auto;
+  }
   &__content {
     position: relative;
     display: flex;
@@ -621,6 +636,21 @@ body .swiper-button {
       margin-right: 20px;
       padding-left: 218px;
       flex: 0 0 40%;
+      @include lg-block() {
+        padding-left: 140px;
+      }
+      @include md-block() {
+        padding-left: 15px;
+      }
+      @include tablet-block() {
+        margin-right: 0;
+      }
+    }
+    @include tablet-block() {
+      flex-direction: column;
+      .reveal {
+        display: none;
+      }
     }
   }
   .study-proposals {
@@ -633,6 +663,12 @@ body .swiper-button {
     border-radius: 16px;
     padding: 0px;
     max-width: 820px;
+    @include md-block() {
+      max-width: 100%;
+    }
+    @include tablet-block() {
+      margin-top: 30px;
+    }
   }
   .study-proposal {
     position: relative;
@@ -682,6 +718,9 @@ body .swiper-button {
         height: 1px;
       }
     }
+    @include md-block() {
+      padding: 42px 46px 42px 46px;
+    }
   }
   .study-text {
     color: #879197;
@@ -709,6 +748,18 @@ body .swiper-button {
     }
   }
 }
+
+.demo-gallery {
+  overflow: hidden;
+  .wrapper {
+    display: flex;
+  }
+  li {
+    flex-shrink: 0;
+    width: clamp(500px, 60vw, 800px);
+  }
+}
+
 .online-school,
 .demo-access {
   padding-top: 130px;
@@ -721,7 +772,12 @@ body .swiper-button {
   background-color: $dark;
   color: $white;
   padding-left: 250px;
-  height: 100vh;
+  @include lg-block() {
+    padding-left: 140px;
+  }
+  @include tablet-block() {
+    padding-left: 15px;
+  }
   .section-title {
     margin-bottom: 32px;
   }
@@ -730,14 +786,28 @@ body .swiper-button {
   }
   &__content {
     display: flex;
+    align-items: center;
     flex-wrap: wrap;
+    @include md-block() {
+      flex-direction: column;
+      align-items: flex-start;
+    }
   }
   &__left {
     flex: 1 1 38%;
     padding-right: 20px;
+    @include lg-block() {
+      flex: 1 1 50%;
+    }
+    @include lg-block() {
+      margin-bottom: 40px;
+    }
   }
   &__right {
     flex: 1 1 62%;
+    @include lg-block() {
+      flex: 1 1 50%;
+    }
   }
   p {
     margin-bottom: 16px;
@@ -912,7 +982,7 @@ body .swiper-button {
   }
   &__overlay {
     position: absolute;
-    bottom: 0;
+    bottom: -1px;
     left: 0;
     right: 0;
     z-index: 1;
@@ -1126,6 +1196,12 @@ body .swiper-button {
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
     margin-top: 52px;
+    @include md-block() {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @include tabletl-block() {
+      grid-template-columns: repeat(1, 1fr);
+    }
     &__item {
       border-radius: 24px;
       border: 1px solid #c0c5c8;
@@ -1202,14 +1278,25 @@ body .swiper-button {
   padding-top: 130px;
   padding-bottom: 55px;
   &-items {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 180px;
+    @include row-flex();
+    @include lg-block() {
+      //grid-column-gap: 100px;
+    }
+    @include md-block() {
+      justify-content: center;
+      //grid-column-gap: 60px;
+    }
+    @include tablet-block() {
+      //grid-template-columns: 1fr 1fr;
+      //justify-items: center;
+    }
   }
   .logo {
     margin-bottom: 75px;
   }
   &-item {
+    @include col();
+    @include size(4);
     h4 {
       font-weight: 700;
       margin-bottom: 24px;
@@ -1227,6 +1314,17 @@ body .swiper-button {
         text-decoration: none;
         color: inherit;
       }
+      @include md-block() {
+       flex-direction: column;
+        align-items: flex-start;
+        li {
+          margin-right: 0;
+          margin-bottom: 20px;
+          &:last-child {
+            margin-bottom: 0;
+          }
+        }
+      }
     }
     &__payments {
       li {
@@ -1239,6 +1337,12 @@ body .swiper-button {
     &__news {
       p {
         color: #879197;
+      }
+    }
+    @include md-block() {
+      @include size(6);
+      &:nth-child(3) {
+        margin-top: 40px;
       }
     }
   }
